# svg2mpl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml  test.yml
docs/: api.md  guide.md  index.md  installation.md
docs/examples/: placement.ipynb  quickstart.ipynb  styling.ipynb
src/svg2mpl/: __init__.py  color.py  css.py  gradients.py  parser.py  pathdata.py  render.py  scene.py  shapes.py  style.py  text.py  transform.py
tests/: test_color.py  test_css.py  test_gradients.py  test_image.py  test_parser.py  test_render.py  test_shapes.py  test_style.py  test_text.py  test_transform.py
